Actions
Bug #1586
closedmount_smbfs doesn't document noacl
Status:
Closed
Priority:
Low
Assignee:
-
Category:
-
Start date:
2011-09-30
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
needs-triage
Gerrit CR:
Description
see summary
Updated by Gordon Ross over 4 years ago
In addition, the default is (arguably) wrong. The most common use case for smbfs is a
mount used by a single user, and for that the best default is "noacl".
The use cases where the "acl" mount option is desirable are where we're
using smbfs to migrate data (including security) from some other system.
That's much less common.
Updated by Electric Monk over 4 years ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit 9005860cd203e6b775305e7c8ffea67e92898374
commit 9005860cd203e6b775305e7c8ffea67e92898374 Author: Gordon Ross <gwr@nexenta.com> Date: 2018-03-04T01:50:01.000Z 1586 mount_smbfs doesn't document noacl Reviewed by: Jason King <jason.brian.king@gmail.com> Reviewed by: C Fraire <cfraire@me.com> Approved by: Richard Lowe <richlowe@richlowe.net>
Actions